no more bubbles :(

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 
   <li class="codeBit" id="battleShips">
     <!--<h3>2015 Sept 22</h3>-->
-    <h3>Battleship Galactic</h3>
+    <h3>Galactic Battle</h3>
     <span class="update">2015 Sept 22</span>
     <!--<span class="update">Last updated: 2015/09/22</span>-->
     <a href="Battleship_Galactic/index.html"><img id="battlePic" src="Battleship_Galactic/pusheen-wiggle-rockets.jpg"/></a>
@@ -154,19 +154,19 @@
 
 </ul>
 
-<div class="codeBit" id="bubbleWrap">
+<!--<div class="codeBit" id="bubbleWrap">-->
 
-  <h3>Bubble Wrap</h3>
-  <span class="update">2014 November 09</span>
-  <form>
-    <input type="text" name="numBubbles" placeholder="How Many Bubbles?"/>
-    <input type="submit" value="Create!"/>
-  </form>
-  <span class="update">Last update: 2014/11/24</span>
-  <div class="makeBubbles"></div>
-</div>
+  <!--<h3>Bubble Wrap</h3>-->
+  <!--<span class="update">2014 November 09</span>-->
+  <!--<form>-->
+    <!--<input type="text" name="numBubbles" placeholder="How Many Bubbles?"/>-->
+    <!--<input type="submit" value="Create!"/>-->
+  <!--</form>-->
+  <!--<span class="update">Last update: 2014/11/24</span>-->
+  <!--<div class="makeBubbles"></div>-->
+<!--</div>-->
 
-You can put my boolean in a constant cause I'll always be true to you.
+<!--You can put my boolean in a constant cause I'll always be true to you.-->
 
 
 
