--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 </script>
 <head>
   <link rel="stylesheet" type="text/css" href="Index/css/reset.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.0.1/css/foundation.css">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
+  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.0.1/css/foundation.css">-->
   <link rel="stylesheet" type="text/css" href="Index/css/style.css">
   <link rel="stylesheet" type="text/css" href="Weather_Bar/weather-bar.css">
 
@@ -26,75 +26,82 @@
 
 <body>
 
-<div class="headerBar">
+<header class="headerBar">
   <div class="nameBar">
     <div class="container">
       <h1>Jameela Huq</h1>
     </div>
   </div>
-</div>
+
+  <ul class="navBar">
+    <li>programming</li>
+    <li>performing</li>
+    <li>science</li>
+  </ul>
+
+</header>
 
 
-<div id="forecastPanel">
+<!--<div class="codeBit" id="petPoke">-->
+  <!--<div>-->
+    <!--<h3>Welcome!</h3>-->
+    <!--<img id="petPic" src="Pet_Poke/images/pusheen-wiggle-sad.gif" alt="pet pic!"/>-->
+    <!--<span class="update">Last update: 2015/08/18</span>-->
+    <!--<span class="results">Let's not play today. I'm not feeling well...</span>-->
+  <!--</div>-->
+<!--</div>-->
 
-  <div id="nowWeatherBox">
-    <img src="Weather_Bar/pusheen-sun.png"/>
-    <div class="weatherStats">
+<!--<div id="forecastPanel">-->
 
-      <div id="cityState">Where am I today?</div>
+  <!--<div id="nowWeatherBox">-->
+    <!--<img src="Weather_Bar/pusheen-sun.png"/>-->
+    <!--<div class="weatherStats">-->
 
-      <div class="tempAndHumid">
-        <span class="temp">Hot!</span><span class="humid">Humid!</span>
-      </div>
+      <!--<div id="cityState">Where am I today?</div>-->
 
-      <form id="findWeather">
-        <i class= "fa fa-search"></i><input id="weatherSearchBar" placeholder="enter a zip code">
+      <!--<div class="tempAndHumid">-->
+        <!--<span class="temp">Hot!</span><span class="humid">Humid!</span>-->
+      <!--</div>-->
 
-      </form>
-    </div>
+      <!--<form id="findWeather">-->
+        <!--<i class= "fa fa-search"></i><input id="weatherSearchBar" placeholder="enter a zip code">-->
 
-  </div>
+      <!--</form>-->
+    <!--</div>-->
 
-<!--<div id="webCam"><img src="boxes/pusheen_internet_wiggle.gif"/>Click to see next</div>-->
+  <!--</div>-->
 
-  <div id="forecastTab"><i id="forecastArrow" class="fa fa-get-pocket close"></i> Three Day Forecast</div>
+<!--&lt;!&ndash;<div id="webCam"><img src="boxes/pusheen_internet_wiggle.gif"/>Click to see next</div>&ndash;&gt;-->
 
-  <div id="threeDayForecast">
-    <div class="threeDayDay" id="day1">
-      <div class="dayOfWeek">Caturday</div>
-      <img src = "Weather_Bar/pusheen-sun.png"/>
-      <div class="tempAndHumid">
-        <div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>
-      </div>
-    </div>
+  <!--<div id="forecastTab"><i id="forecastArrow" class="fa fa-get-pocket close"></i> Three Day Forecast</div>-->
 
-    <div class="threeDayDay" id="day2">
-      <div class="dayOfWeek">Caturday</div>
-      <img src = "Weather_Bar/pusheen-sun.png"/>
-      <div class="tempAndHumid">
-        <div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>
-      </div>
-    </div>
+  <!--<div id="threeDayForecast">-->
+    <!--<div class="threeDayDay" id="day1">-->
+      <!--<div class="dayOfWeek">Caturday</div>-->
+      <!--<img src = "Weather_Bar/pusheen-sun.png"/>-->
+      <!--<div class="tempAndHumid">-->
+        <!--<div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>-->
+      <!--</div>-->
+    <!--</div>-->
 
-    <div class="threeDayDay" id="day3">
-      <div class="dayOfWeek">Caturday</div>
-      <img src = "Weather_Bar/pusheen-sun.png"/>
-      <div class="tempAndHumid">
-        <div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>
-      </div>
-    </div>
-  </div>
+    <!--<div class="threeDayDay" id="day2">-->
+      <!--<div class="dayOfWeek">Caturday</div>-->
+      <!--<img src = "Weather_Bar/pusheen-sun.png"/>-->
+      <!--<div class="tempAndHumid">-->
+        <!--<div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>-->
+      <!--</div>-->
+    <!--</div>-->
 
-</div><!--forecast panel-->
+    <!--<div class="threeDayDay" id="day3">-->
+      <!--<div class="dayOfWeek">Caturday</div>-->
+      <!--<img src = "Weather_Bar/pusheen-sun.png"/>-->
+      <!--<div class="tempAndHumid">-->
+        <!--<div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
-<div class="codeBit" id="petPoke">
-  <div>
-    <h3>Welcome!</h3>
-    <img id="petPic" src="Pet_Poke/images/pusheen-wiggle-sad.gif" alt="pet pic!"/>
-    <span class="update">Last update: 2015/08/18</span>
-    <span class="results">Let's not play today. I'm not feeling well...</span>
-  </div>
-</div>
+<!--</div> &lt;!&ndash;forecast panel&ndash;&gt;-->
 
 <ul class="codePortfolio">
 
@@ -151,6 +158,24 @@
     <span class="update">Last update: 2015/11/07</span>
   </li>
 
+  <li class="codeBit" id="focusIn">
+    <h3>Focus In</h3>
+    <span class="update">2016 June 08</span>
+    <div id="magnifyingArea">
+      <!--<img src="Program_Blog/Focus_In/worldsfair11-hr.jpg"/>-->
+      <!--<figure id="magnifyingGlass"></figure>-->
+      <img id="magnifyingGlass" src="Program_Blog/Focus_In/magnify-pointer.png">
+      <img id="magnifiedImage" src="http://www.google.com/logos/2011/worldsfair11-hp.jpg">
+    </div>
+    <p class="desc">I found this coding challenge on line. It uses a Google header image and asks the programmer to "magnify" it. The first challenge in this
+    was that the magnifying glass was too large to use the "cursor" property in the CSS. Therefore, it's necessary to create an HTML element that can be referenced
+    and manipulated in the javascript. Getting the pointers X and Y coordinates, and setting them equal to the "top" and "bottom" properties of the glass element is a start.
+      The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to
+      the pointed-to element.
+    The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>
+    <span class="update">Last update: 2015/11/07</span>
+  </li>
+
 </ul>
 
 <!--<div class="codeBit" id="bubbleWrap">-->
@@ -181,6 +206,7 @@
 <script src="Index/js/jquery-1.11.1.min.js"></script>
 <script src="Index/js/bubbleWrap.js"></script>
 <script src="Index/js/main.js"></script>
+<script src="Program_Blog/Focus_In/focus-in.js"></script>
 <script src="Weather_Bar/weather-bar.js"></script>
 <script src="Pet_Poke/pet-poke.js"></script>
 
