--- a/public/index.html
+++ b/public/index.html
@@ -16,193 +16,134 @@
 </script>
 <head>
   <link rel="stylesheet" type="text/css" href="Index/css/reset.css">
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.0.1/css/foundation.css">-->
   <link rel="stylesheet" type="text/css" href="Index/css/style.css">
-  <link rel="stylesheet" type="text/css" href="Weather_Bar/weather-bar.css">
-
-
 </head>
-
 <body>
 
 <header class="headerBar">
+
   <div class="nameBar">
     <div class="container">
       <h1>Jameela Huq</h1>
     </div>
   </div>
 
+  <ul class="socialLinksTop">
+    <li class="linkedIn"><a href="https://www.linkedin.com/in/jameelahuq"><i class="fa fa-linkedin"></i></a></li>
+    <li class="github"><a href="https://github.com/jameelahuq"><i class="fa fa-github"></i></a></li>
+    <li class="twitter"><a href="https://twitter.com/JameelaHuq"><i class="fa fa-twitter"></i></a></li>
+    <li class="email"><a href="mailto:jameelahuq@gmail.com"><i class="fa fa-envelope"></i></a></li>
+  </ul>
+
   <ul class="navBar">
-    <li>programming</li>
-    <li>performing</li>
-    <li>science</li>
+    <li>Web Development</li>
+    <li>Science</li>
+    <li>Music</li>
+    <li>Résumé</li>
   </ul>
 
 </header>
 
+<section class="selfIntro">
 
-<!--<div class="codeBit" id="petPoke">-->
-  <!--<div>-->
-    <!--<h3>Welcome!</h3>-->
-    <!--<img id="petPic" src="Pet_Poke/images/pusheen-wiggle-sad.gif" alt="pet pic!"/>-->
-    <!--<span class="update">Last update: 2015/08/18</span>-->
-    <!--<span class="results">Let's not play today. I'm not feeling well...</span>-->
-  <!--</div>-->
-<!--</div>-->
+</section>
 
-<!--<div id="forecastPanel">-->
+<section class="codePortfolio">
+  <ul class="portfolioList">
 
-  <!--<div id="nowWeatherBox">-->
-    <!--<img src="Weather_Bar/pusheen-sun.png"/>-->
-    <!--<div class="weatherStats">-->
+    <li class="codeBit" id="jaqd">
+      <h3>JAQ'd Blog</h3>
+      <span class="update">2015 Nov 20</span>
+      <a href="  http://jaqd.herokuapp.com/#/home"><img src="Index/images/pusheen-wiggle-blogger.gif"></a>
+      <span class="update">Last update: 2015/11/25</span>
+    </li>
 
-      <!--<div id="cityState">Where am I today?</div>-->
+    <li class="codeBit" id="battleShips">
+      <!--<h3>2015 Sept 22</h3>-->
+      <h3>Galactic Battle</h3>
+      <span class="update">2015 Sept 22</span>
+      <!--<span class="update">Last updated: 2015/09/22</span>-->
+      <a href="Battleship_Galactic/index.html"><img id="battlePic" src="Battleship_Galactic/pusheen-wiggle-rockets.jpg"/></a>
+      <!--<span class="bitTitle">Battleship Galactic!</span>-->
+      <span class="update">Last update: 2015/09/22</span>
+    </li>
 
-      <!--<div class="tempAndHumid">-->
-        <!--<span class="temp">Hot!</span><span class="humid">Humid!</span>-->
-      <!--</div>-->
+    <li class="codeBit" id="Hanoi">
+      <h3>Noah's Ark</h3>
+      <!--<h3>2015 August 31</h3>-->
+      <span class="update">2015 August 31</span>
+      <a href="Hanoi/hanoi.html"><img src="Index/images/pusheen-wiggle-boat.gif"></a>
+      <span class="update">Last update: 2015/08/32</span>
+    </li>
 
-      <!--<form id="findWeather">-->
-        <!--<i class= "fa fa-search"></i><input id="weatherSearchBar" placeholder="enter a zip code">-->
+    <li class="codeBit" id="Flikd">
+      <h3>Flik'd Photos</h3>
+      <span class="update">2015 August 29</span>
+      <a href="Boxes/boxes.html"><img src="Boxes/pusheen_internet_wiggle.gif"></a>
+      <span class="update">Last update: 2015/08/30</span>
+    </li>
 
-      <!--</form>-->
-    <!--</div>-->
+    <li class="codeBit" id="catBush">
+      <h3>Find the Cat</h3>
+      <span class="update">2014 March 28</span>
+      <a href="Find_the_Cat/find_the_cat.html"><img src="Index/images/ninja_pusheen_wiggle.gif"></a>
+      <span class="update">Last update: 2015/08/27</span>
+    </li>
 
-  <!--</div>-->
+    <li class="codeBit" id="calculator">
+      <h3>Kitty Calculator</h3>
+      <span class="update">2015 Aug 30</span>
+      <a href="Calculator/calculator.html"><img src="Calculator/pusheen-wiggle-math.gif"></a>
+      <span class="update">Last update: 2015/09/01</span>
+    </li>
 
-<!--&lt;!&ndash;<div id="webCam"><img src="boxes/pusheen_internet_wiggle.gif"/>Click to see next</div>&ndash;&gt;-->
+    <li class="codeBit" id="rhymeChasers">
+      <h3>Chase the Rhyme</h3>
+      <span class="update">2015 Oct 25</span>
+      <!--<a href="https://www.rhymechasers.com/games/rhymechasers/"><img src="https://www.rhymechasers.com/images/logo-color.png"></a>-->
+      <span class="update">Last update: 2015/11/07</span>
+    </li>
 
-  <!--<div id="forecastTab"><i id="forecastArrow" class="fa fa-get-pocket close"></i> Three Day Forecast</div>-->
+    <li class="codeBit" id="focusIn">
+      <h3>Focus In</h3>
+      <span class="update">2016 June 08</span>
+      <div class="centeringContainer">
+        <div id="magnifyingArea">
+          <!--<img src="Program_Blog/Focus_In/worldsfair11-hr.jpg"/>-->
+          <!--<figure id="magnifyingGlass"></figure>-->
+          <img id="magnifyingGlass" src="Program_Blog/Focus_In/magnify-pointer.png">
+          <img id="magnifiedImage" src="Program_Blog/Focus_In/worldsfair11-hp.jpg">
+        </div>
+      </div>
 
-  <!--<div id="threeDayForecast">-->
-    <!--<div class="threeDayDay" id="day1">-->
-      <!--<div class="dayOfWeek">Caturday</div>-->
-      <!--<img src = "Weather_Bar/pusheen-sun.png"/>-->
-      <!--<div class="tempAndHumid">-->
-        <!--<div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>-->
-      <!--</div>-->
-    <!--</div>-->
+      <p class="desc">I found this coding challenge on line. It uses a Google header image and asks the programmer to "magnify" it. The first challenge in this
+        was that the magnifying glass was too large to use the "cursor" property in the CSS. Therefore, it's necessary to create an HTML element that can be referenced
+        and manipulated in the javascript. Getting the pointers X and Y coordinates, and setting them equal to the "top" and "left" properties of the glass element is a start.
+        The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to
+        the pointed-to element.
+        The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>
+      <span class="update">Last update: 2015/11/07</span>
+    </li>
 
-    <!--<div class="threeDayDay" id="day2">-->
-      <!--<div class="dayOfWeek">Caturday</div>-->
-      <!--<img src = "Weather_Bar/pusheen-sun.png"/>-->
-      <!--<div class="tempAndHumid">-->
-        <!--<div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>-->
-      <!--</div>-->
-    <!--</div>-->
+  </ul>
 
-    <!--<div class="threeDayDay" id="day3">-->
-      <!--<div class="dayOfWeek">Caturday</div>-->
-      <!--<img src = "Weather_Bar/pusheen-sun.png"/>-->
-      <!--<div class="tempAndHumid">-->
-        <!--<div class="temp">Cold-Hot!</div><div class="humid">Humid!</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
+</section>
 
-<!--</div> &lt;!&ndash;forecast panel&ndash;&gt;-->
+<footer>
+  <span>Copyright C 2016, Jameela Huq (with a little help from <a href="http://www.pusheen.com/">Pusheen</a>)</span>
+  <ul class="socialLinksBottom">
+    <li><a href="https://www.linkedin.com/in/jameelahuq">LinkedIn</a></li>
+    <li><a href="https://github.com/jameelahuq">Github</a></li>
+    <li><a href="https://twitter.com/JameelaHuq">Twitter</a></li>
+    <li><a href="mailto:jameelahuq@gmail.com">Email</a></li>
+    <li><a href="*">Résumé</a></li>
+  </ul>
+</footer>
 
-<ul class="codePortfolio">
-
-  <li class="codeBit" id="jaqd">
-    <h3>JAQ'd Blog</h3>
-    <span class="update">2015 Nov 20</span>
-    <a href="  http://jaqd.herokuapp.com/#/home"><img src="Index/images/pusheen-wiggle-blogger.gif"></a>
-    <span class="update">Last update: 2015/11/25</span>
-  </li>
-
-  <li class="codeBit" id="battleShips">
-    <!--<h3>2015 Sept 22</h3>-->
-    <h3>Galactic Battle</h3>
-    <span class="update">2015 Sept 22</span>
-    <!--<span class="update">Last updated: 2015/09/22</span>-->
-    <a href="Battleship_Galactic/index.html"><img id="battlePic" src="Battleship_Galactic/pusheen-wiggle-rockets.jpg"/></a>
-    <!--<span class="bitTitle">Battleship Galactic!</span>-->
-    <span class="update">Last update: 2015/09/22</span>
-  </li>
-
-  <li class="codeBit" id="Hanoi">
-    <h3>Noah's Ark</h3>
-    <!--<h3>2015 August 31</h3>-->
-    <span class="update">2015 August 31</span>
-    <a href="Hanoi/hanoi.html"><img src="Index/images/pusheen-wiggle-boat.gif"></a>
-    <span class="update">Last update: 2015/08/32</span>
-  </li>
-
-  <li class="codeBit" id="Flikd">
-    <h3>Flik'd Photos</h3>
-    <span class="update">2015 August 29</span>
-    <a href="Boxes/boxes.html"><img src="Boxes/pusheen_internet_wiggle.gif"></a>
-    <span class="update">Last update: 2015/08/30</span>
-  </li>
-
-  <li class="codeBit" id="catBush">
-    <h3>Find the Cat</h3>
-    <span class="update">2014 March 28</span>
-    <a href="Find_the_Cat/find_the_cat.html"><img src="Index/images/ninja_pusheen_wiggle.gif"></a>
-    <span class="update">Last update: 2015/08/27</span>
-  </li>
-
-  <li class="codeBit" id="calculator">
-    <h3>Kitty Calculator</h3>
-    <span class="update">2015 Aug 30</span>
-    <a href="Calculator/calculator.html"><img src="Calculator/pusheen-wiggle-math.gif"></a>
-    <span class="update">Last update: 2015/09/01</span>
-  </li>
-
-  <li class="codeBit" id="rhymeChasers">
-    <h3>Chase the Rhyme</h3>
-    <span class="update">2015 Oct 25</span>
-    <a href="https://www.rhymechasers.com/games/rhymechasers/"><img src="https://www.rhymechasers.com/images/logo-color.png"></a>
-    <span class="update">Last update: 2015/11/07</span>
-  </li>
-
-  <li class="codeBit" id="focusIn">
-    <h3>Focus In</h3>
-    <span class="update">2016 June 08</span>
-    <div id="magnifyingArea">
-      <!--<img src="Program_Blog/Focus_In/worldsfair11-hr.jpg"/>-->
-      <!--<figure id="magnifyingGlass"></figure>-->
-      <img id="magnifyingGlass" src="Program_Blog/Focus_In/magnify-pointer.png">
-      <img id="magnifiedImage" src="http://www.google.com/logos/2011/worldsfair11-hp.jpg">
-    </div>
-    <p class="desc">I found this coding challenge on line. It uses a Google header image and asks the programmer to "magnify" it. The first challenge in this
-    was that the magnifying glass was too large to use the "cursor" property in the CSS. Therefore, it's necessary to create an HTML element that can be referenced
-    and manipulated in the javascript. Getting the pointers X and Y coordinates, and setting them equal to the "top" and "bottom" properties of the glass element is a start.
-      The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to
-      the pointed-to element.
-    The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>
-    <span class="update">Last update: 2015/11/07</span>
-  </li>
-
-</ul>
-
-<!--<div class="codeBit" id="bubbleWrap">-->
-
-  <!--<h3>Bubble Wrap</h3>-->
-  <!--<span class="update">2014 November 09</span>-->
-  <!--<form>-->
-    <!--<input type="text" name="numBubbles" placeholder="How Many Bubbles?"/>-->
-    <!--<input type="submit" value="Create!"/>-->
-  <!--</form>-->
-  <!--<span class="update">Last update: 2014/11/24</span>-->
-  <!--<div class="makeBubbles"></div>-->
-<!--</div>-->
-
-<!--You can put my boolean in a constant cause I'll always be true to you.-->
-
-
-
-<!--<div class="codeBit" id="bondBuddies">
-  <h3>2014 November 15 - hackHER day!</h3>
-  <button onclick="window.location.href='/chemistry/index.html'">Bond Buddies!</button>
-</div>-->
-
-
-<!--page content-->
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
 <script src="Index/js/jquery-1.11.1.min.js"></script>
 <script src="Index/js/bubbleWrap.js"></script>
 <script src="Index/js/main.js"></script>
