colors applied to sections and bg

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="Index/css/reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:700,400' rel='stylesheet' type='text/css'>
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.0.1/css/foundation.css">-->
   <link rel="stylesheet" type="text/css" href="Index/css/style.css">
 </head>
@@ -26,17 +26,14 @@
 <header class="headerBar">
 
   <div class="nameBar">
-    <div class="container">
-      <h1>Jameela Huq</h1>
-    </div>
+    <h1>Jameela Huq</h1>
+    <ul class="socialLinksTop">
+      <li class="linkedIn"><a href="https://www.linkedin.com/in/jameelahuq"><i class="fa fa-linkedin"></i></a></li>
+      <li class="github"><a href="https://github.com/jameelahuq"><i class="fa fa-github"></i></a></li>
+      <li class="twitter"><a href="https://twitter.com/JameelaHuq"><i class="fa fa-twitter"></i></a></li>
+      <li class="email"><a href="mailto:jameelahuq@gmail.com"><i class="fa fa-envelope"></i></a></li>
+    </ul>
   </div>
-
-  <ul class="socialLinksTop">
-    <li class="linkedIn"><a href="https://www.linkedin.com/in/jameelahuq"><i class="fa fa-linkedin"></i></a></li>
-    <li class="github"><a href="https://github.com/jameelahuq"><i class="fa fa-github"></i></a></li>
-    <li class="twitter"><a href="https://twitter.com/JameelaHuq"><i class="fa fa-twitter"></i></a></li>
-    <li class="email"><a href="mailto:jameelahuq@gmail.com"><i class="fa fa-envelope"></i></a></li>
-  </ul>
 
   <ul class="navBar">
     <li>Web Development</li>
@@ -48,86 +45,92 @@
 </header>
 
 <section class="selfIntro">
+  <div class="primaryIntro">
+    <h2>Primary Heading</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium architecto at consectetur consequatur debitis deserunt dolor doloremque ducimus excepturi explicabo itaque maiores maxime nisi non, sequi vero. Dicta, magni.</p>
+  </div>
 
+  <button class="actionIntro">Call to Action</button>
+
+  <div class="secondaryIntro">
+    <h3>Secondary Heading</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium architecto at consectetur consequatur debitis deserunt dolor doloremque ducimus excepturi explicabo itaque maiores maxime nisi non, sequi vero. Dicta, magni.</p>
+  </div>
 </section>
 
 <section class="codePortfolio">
   <ul class="portfolioList">
 
     <li class="codeBit" id="jaqd">
+      <a href="  http://jaqd.herokuapp.com/#/home"><img src="Index/images/pusheen-wiggle-blogger.gif"></a>
       <h3>JAQ'd Blog</h3>
       <span class="update">2015 Nov 20</span>
-      <a href="  http://jaqd.herokuapp.com/#/home"><img src="Index/images/pusheen-wiggle-blogger.gif"></a>
       <span class="update">Last update: 2015/11/25</span>
     </li>
 
     <li class="codeBit" id="battleShips">
+      <a href="Battleship_Galactic/index.html"><img id="battlePic" src="Battleship_Galactic/pusheen-wiggle-rockets.jpg"/></a>
       <!--<h3>2015 Sept 22</h3>-->
       <h3>Galactic Battle</h3>
       <span class="update">2015 Sept 22</span>
       <!--<span class="update">Last updated: 2015/09/22</span>-->
-      <a href="Battleship_Galactic/index.html"><img id="battlePic" src="Battleship_Galactic/pusheen-wiggle-rockets.jpg"/></a>
       <!--<span class="bitTitle">Battleship Galactic!</span>-->
       <span class="update">Last update: 2015/09/22</span>
     </li>
 
     <li class="codeBit" id="Hanoi">
+      <a href="Hanoi/hanoi.html"><img src="Index/images/pusheen-wiggle-boat.gif"></a>
       <h3>Noah's Ark</h3>
       <!--<h3>2015 August 31</h3>-->
       <span class="update">2015 August 31</span>
-      <a href="Hanoi/hanoi.html"><img src="Index/images/pusheen-wiggle-boat.gif"></a>
       <span class="update">Last update: 2015/08/32</span>
     </li>
 
     <li class="codeBit" id="Flikd">
+      <a href="Boxes/boxes.html"><img src="Boxes/pusheen_internet_wiggle.gif"></a>
       <h3>Flik'd Photos</h3>
       <span class="update">2015 August 29</span>
-      <a href="Boxes/boxes.html"><img src="Boxes/pusheen_internet_wiggle.gif"></a>
       <span class="update">Last update: 2015/08/30</span>
     </li>
 
     <li class="codeBit" id="catBush">
+      <a href="Find_the_Cat/find_the_cat.html"><img src="Index/images/ninja_pusheen_wiggle.gif"></a>
       <h3>Find the Cat</h3>
       <span class="update">2014 March 28</span>
-      <a href="Find_the_Cat/find_the_cat.html"><img src="Index/images/ninja_pusheen_wiggle.gif"></a>
       <span class="update">Last update: 2015/08/27</span>
     </li>
 
     <li class="codeBit" id="calculator">
+      <a href="Calculator/calculator.html"><img src="Calculator/pusheen-wiggle-math.gif"></a>
       <h3>Kitty Calculator</h3>
       <span class="update">2015 Aug 30</span>
-      <a href="Calculator/calculator.html"><img src="Calculator/pusheen-wiggle-math.gif"></a>
       <span class="update">Last update: 2015/09/01</span>
     </li>
 
     <li class="codeBit" id="rhymeChasers">
+      <a href="https://www.rhymechasers.com/games/rhymechasers/"><img src="https://www.rhymechasers.com/images/logo-color.png"></a>
       <h3>Chase the Rhyme</h3>
       <span class="update">2015 Oct 25</span>
-      <!--<a href="https://www.rhymechasers.com/games/rhymechasers/"><img src="https://www.rhymechasers.com/images/logo-color.png"></a>-->
       <span class="update">Last update: 2015/11/07</span>
     </li>
 
-    <li class="codeBit" id="focusIn">
-      <h3>Focus In</h3>
-      <span class="update">2016 June 08</span>
-      <div class="centeringContainer">
-        <div id="magnifyingArea">
-          <!--<img src="Program_Blog/Focus_In/worldsfair11-hr.jpg"/>-->
-          <!--<figure id="magnifyingGlass"></figure>-->
-          <img id="magnifyingGlass" src="Program_Blog/Focus_In/magnify-pointer.png">
-          <img id="magnifiedImage" src="Program_Blog/Focus_In/worldsfair11-hp.jpg">
-        </div>
-      </div>
-
-      <p class="desc">I found this coding challenge on line. It uses a Google header image and asks the programmer to "magnify" it. The first challenge in this
-        was that the magnifying glass was too large to use the "cursor" property in the CSS. Therefore, it's necessary to create an HTML element that can be referenced
-        and manipulated in the javascript. Getting the pointers X and Y coordinates, and setting them equal to the "top" and "left" properties of the glass element is a start.
-        The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to
-        the pointed-to element.
-        The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>
-      <span class="update">Last update: 2015/11/07</span>
-    </li>
-
+    <!--<li class="codeBit" id="focusInII">-->
+      <!--<div class="centeringContainer">-->
+        <!--<div id="magnifyingArea">-->
+          <!--<img id="magnifyingGlass" src="Program_Blog/Focus_In/magnify-pointer.png">-->
+          <!--<img id="magnifiedImage" src="Program_Blog/Focus_In/worldsfair11-hp.jpg">-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<h3>Focus In</h3>-->
+      <!--&lt;!&ndash;<p class="desc">I found this coding challenge on line. It uses a Google header image and asks the programmer to "magnify" it. The first challenge in this&ndash;&gt;-->
+      <!--&lt;!&ndash;was that the magnifying glass was too large to use the "cursor" property in the CSS. Therefore, it's necessary to create an HTML element that can be referenced&ndash;&gt;-->
+      <!--&lt;!&ndash;and manipulated in the javascript. Getting the pointers X and Y coordinates, and setting them equal to the "top" and "left" properties of the glass element is a start.&ndash;&gt;-->
+      <!--&lt;!&ndash;The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to&ndash;&gt;-->
+      <!--&lt;!&ndash;the pointed-to element.&ndash;&gt;-->
+      <!--&lt;!&ndash;The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>&ndash;&gt;-->
+      <!--<span class="update">2016 June 08</span>-->
+      <!--<span class="update">Last update: 2015/11/07</span>-->
+    <!--</li>-->
   </ul>
 
 </section>
