--- a/public/index.html
+++ b/public/index.html
@@ -39,79 +39,94 @@
     <li>Web Development</li>
     <li>Science</li>
     <li>Music</li>
-    <li>Résumé</li>
+    <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
   </ul>
 
 </header>
 
 <section class="selfIntro">
   <div class="primaryIntro">
-    <h2>Primary Heading</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium architecto at consectetur consequatur debitis deserunt dolor doloremque ducimus excepturi explicabo itaque maiores maxime nisi non, sequi vero. Dicta, magni.</p>
+    <h2>Welcome!</h2>
+    <p>This is my website, built by me. I'm a musician, researcher, teacher, and web developer. Take a look at my projects below, or check
+    out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn</p>
   </div>
 
-  <button class="actionIntro">Call to Action</button>
+  <button class="actionIntro"><a href="mailto:jameelahuq@gmail.com">Send me Info!</a></button>
 
   <div class="secondaryIntro">
-    <h3>Secondary Heading</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium architecto at consectetur consequatur debitis deserunt dolor doloremque ducimus excepturi explicabo itaque maiores maxime nisi non, sequi vero. Dicta, magni.</p>
+    <h3>Full-Stack Engineer</h3>
+    <p>I'm currently looking for a front-end or full-stack web development opportunity. You can take a look at my <a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a> for more information.</p>
   </div>
 </section>
 
 <section class="codePortfolio">
   <ul class="portfolioList">
 
+    <!--https://www.capitalwon.com/#/-->
+
+    <!--https://www.fashionsense.club/-->
+
     <li class="codeBit" id="jaqd">
-      <a href="  http://jaqd.herokuapp.com/#/home"><img src="Index/images/pusheen-wiggle-blogger.gif"></a>
-      <h3>JAQ'd Blog</h3>
-      <span class="update">2015 Nov 20</span>
-      <span class="update">Last update: 2015/11/25</span>
+      <a href="  http://jaqd.herokuapp.com/#/home"><img src="Index/resources/pusheen-wiggle-blogger.gif"></a>
+      <div class="codeBitDesc">
+        <h3>JAQ'd Blog</h3>
+        <span class="created">2015 Nov 20</span>
+        <span class="updated">Last update: 2015/11/25</span>
+      </div>
     </li>
 
     <li class="codeBit" id="battleShips">
       <a href="Battleship_Galactic/index.html"><img id="battlePic" src="Battleship_Galactic/pusheen-wiggle-rockets.jpg"/></a>
-      <!--<h3>2015 Sept 22</h3>-->
-      <h3>Galactic Battle</h3>
-      <span class="update">2015 Sept 22</span>
-      <!--<span class="update">Last updated: 2015/09/22</span>-->
-      <!--<span class="bitTitle">Battleship Galactic!</span>-->
-      <span class="update">Last update: 2015/09/22</span>
+      <div class="codeBitDesc">
+        <h3>Galactic Battle</h3>
+        <span class="created">2015 Sept 22</span>
+        <span class="updated">Last update: 2015/09/22</span>
+      </div>
     </li>
 
     <li class="codeBit" id="Hanoi">
-      <a href="Hanoi/hanoi.html"><img src="Index/images/pusheen-wiggle-boat.gif"></a>
-      <h3>Noah's Ark</h3>
-      <!--<h3>2015 August 31</h3>-->
-      <span class="update">2015 August 31</span>
-      <span class="update">Last update: 2015/08/32</span>
+      <a href="Hanoi/hanoi.html"><img src="Index/resources/pusheen-wiggle-boat.gif"></a>
+      <div class="codeBitDesc">
+        <h3>Noah's Ark</h3>
+        <span class="created">2015 August 31</span>
+        <span class="updated">Last update: 2015/08/32</span>
+        </div>
     </li>
 
     <li class="codeBit" id="Flikd">
       <a href="Boxes/boxes.html"><img src="Boxes/pusheen_internet_wiggle.gif"></a>
-      <h3>Flik'd Photos</h3>
-      <span class="update">2015 August 29</span>
-      <span class="update">Last update: 2015/08/30</span>
+      <div class="codeBitDesc">
+        <h3>Flik'd Photos</h3>
+        <span class="created">2015 August 29</span>
+        <span class="updated">Last update: 2015/08/30</span>
+      </div>
     </li>
 
     <li class="codeBit" id="catBush">
-      <a href="Find_the_Cat/find_the_cat.html"><img src="Index/images/ninja_pusheen_wiggle.gif"></a>
-      <h3>Find the Cat</h3>
-      <span class="update">2014 March 28</span>
-      <span class="update">Last update: 2015/08/27</span>
+      <a href="Find_the_Cat/find_the_cat.html"><img src="Index/resources/ninja_pusheen_wiggle.gif"></a>
+      <div class="codeBitDesc">
+        <h3>Find the Cat</h3>
+        <span class="created">2014 March 28</span>
+        <span class="updated">Last update: 2015/08/27</span>
+      </div>
     </li>
 
     <li class="codeBit" id="calculator">
       <a href="Calculator/calculator.html"><img src="Calculator/pusheen-wiggle-math.gif"></a>
-      <h3>Kitty Calculator</h3>
-      <span class="update">2015 Aug 30</span>
-      <span class="update">Last update: 2015/09/01</span>
+      <div class="codeBitDesc">
+        <h3>Kitty Calculator</h3>
+        <span class="created">2015 Aug 30</span>
+        <span class="updated">Last update: 2015/09/01</span>
+        </div>
     </li>
 
     <li class="codeBit" id="rhymeChasers">
       <a href="https://www.rhymechasers.com/games/rhymechasers/"><img src="https://www.rhymechasers.com/images/logo-color.png"></a>
-      <h3>Chase the Rhyme</h3>
-      <span class="update">2015 Oct 25</span>
-      <span class="update">Last update: 2015/11/07</span>
+      <div class="codeBitDesc">
+        <h3>Chase the Rhyme</h3>
+        <span class="created">2015 Oct 25</span>
+        <span class="updated">Last update: 2015/11/07</span>
+        </div>
     </li>
 
     <!--<li class="codeBit" id="focusInII">-->
@@ -128,30 +143,27 @@
       <!--&lt;!&ndash;The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to&ndash;&gt;-->
       <!--&lt;!&ndash;the pointed-to element.&ndash;&gt;-->
       <!--&lt;!&ndash;The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>&ndash;&gt;-->
-      <!--<span class="update">2016 June 08</span>-->
-      <!--<span class="update">Last update: 2015/11/07</span>-->
+      <!--<span class="updated">2016 June 08</span>-->
+      <!--<span class="updated">Last update: 2015/11/07</span>-->
     <!--</li>-->
   </ul>
 
 </section>
 
 <footer>
-  <span>Copyright C 2016, Jameela Huq (with a little help from <a href="http://www.pusheen.com/">Pusheen</a>)</span>
+  <span>Copyright © 2016, Jameela Huq (with a little help from <a href="http://www.pusheen.com/">Pusheen</a>)</span>
   <ul class="socialLinksBottom">
     <li><a href="https://www.linkedin.com/in/jameelahuq">LinkedIn</a></li>
     <li><a href="https://github.com/jameelahuq">Github</a></li>
     <li><a href="https://twitter.com/JameelaHuq">Twitter</a></li>
     <li><a href="mailto:jameelahuq@gmail.com">Email</a></li>
-    <li><a href="*">Résumé</a></li>
+    <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
   </ul>
 </footer>
 
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
 <script src="Index/js/jquery-1.11.1.min.js"></script>
-<script src="Index/js/bubbleWrap.js"></script>
 <script src="Index/js/main.js"></script>
-<script src="Program_Blog/Focus_In/focus-in.js"></script>
-<script src="Weather_Bar/weather-bar.js"></script>
+<!--<script src="Program_Blog/Focus_In/focus-in.js"></script>-->
 <script src="Pet_Poke/pet-poke.js"></script>
 
 
