--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
 <section class="selfIntro">
   <div class="primaryIntro">
     <h2>Welcome!</h2>
-    <p>This is my website, built by me. I'm a musician, researcher, teacher, and web developer. Take a look at my projects below, or check
-    out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn</p>
+    <p>This is my website, built by me! I'm a musician, researcher, teacher, and web developer. Take a look at my projects below, or check
+    out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn.</p>
   </div>
 
   <button class="actionIntro"><a href="mailto:jameelahuq@gmail.com">Send me Info!</a></button>
