--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
   (function(i,s,o,g,r,a,m) {
     i['GoogleAnalyticsObject']=r;i[r]=i[r]||function() {
