content is justified

--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,14 @@
     </ul>
   </div>
 
-  <ul class="navBar">
-    <li>Web Development</li>
-    <li>Science</li>
-    <li>Music</li>
-    <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
-  </ul>
+  <div class="navBar">
+    <ul>
+      <li>Web Development</li>
+      <li>Science</li>
+      <li>Music</li>
+      <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
+    </ul>
+  </div>
 
 </header>
 
