action button fits in margins, nav wrap

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="Index/css/reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:700,400' rel='stylesheet' type='text/css'>
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.0.1/css/foundation.css">-->
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,900,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="Index/css/style.css">
 </head>
 <body>
@@ -54,7 +54,7 @@
     out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn.</p>
   </div>
 
-  <button class="actionIntro"><a href="mailto:jameelahuq@gmail.com">Send me Info!</a></button>
+  <p class="actionIntro"> <a href="mailto:jameelahuq@gmail.com">Send me Info!</a></p>
 
   <div class="secondaryIntro">
     <h3>Full-Stack Engineer</h3>
