blog folders moved outside for future refactor

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
     </li>
 
     <li class="codeBit" id="Flikd">
-      <a href="Boxes/boxes.html"><img src="Boxes/pusheen_internet_wiggle.gif"></a>
+      <a href="../assets/Boxes/boxes.html"><img src="../assets/Boxes/pusheen_internet_wiggle.gif"></a>
       <div class="codeBitDesc">
         <h3>Flik'd Photos</h3>
         <span class="created">2015 August 29</span>
@@ -183,7 +183,7 @@
 <script src="Index/js/jquery-1.11.1.min.js"></script>
 <script src="Index/js/main.js"></script>
 <!--<script src="Program_Blog/Focus_In/focus-in.js"></script>-->
-<script src="Pet_Poke/pet-poke.js"></script>
+<script src="../assets/Pet_Poke/pet-poke.js"></script>
 
 
 </body>
