code review tasks completed, added min-margins

--- a/public/index.html
+++ b/public/index.html
@@ -25,157 +25,162 @@
 </head>
 <body>
 
-<!--TODO: remove class-->
-<header class="headerBar">
+<header>
 
-  <!-- TODO: you can probably replace <div class="nameBar"> with just <section> -->
-  <div class="nameBar">
+  <div class="name-bar">
     <h1>Jameela Huq</h1>
     <!-- TODO: change everything to non-camelcase, rename to social-links and target based on container -->
-    <ul class="socialLinksTop">
+    <ul class="social-links">
       <!-- TODO: accessibility (screen readers need hidden text to know where these links go) -->
-      <!-- TODO: accessibility (every fa element should have aria-hidden="true") -->
-      <li class="linkedIn"><a href="https://www.linkedin.com/in/jameelahuq"><i class="fa fa-linkedin"></i></a></li>
-      <li class="github"><a href="https://github.com/jameelahuq"><i class="fa fa-github"></i></a></li>
-      <li class="twitter"><a href="https://twitter.com/JameelaHuq"><i class="fa fa-twitter"></i></a></li>
-      <li class="email"><a href="mailto:jameelahuq@gmail.com"><i class="fa fa-envelope"></i></a></li>
+      <li class="linkedIn">
+        <a href="https://www.linkedin.com/in/jameelahuq">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+          <span class="hidden-text">LinkedIn</span>
+        </a>
+      </li>
+      <li class="github">
+        <a href="https://github.com/jameelahuq">
+          <i class="fa fa-github" aria-hidden="true"></i>
+          <span class="hidden-text">Github</span>
+        </a>
+      </li>
+      <li class="twitter">
+        <a href="https://twitter.com/JameelaHuq">
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          <span class="hidden-text">Twitter</span>
+        </a>
+      </li>
+      <li class="email">
+        <a href="mailto:jameelahuq@gmail.com">
+          <i class="fa fa-envelope" aria-hidden="true"></i>
+          <span class="hidden-text">Email jameelahuq@gmail.com</span>
+        </a>
+      </li>
     </ul>
   </div>
 
-  <!-- TODO: <nav> -->
-  <div class="navBar">
+  <nav>
     <ul>
       <li>Web Development</li>
       <li>Science</li>
       <li>Music</li>
       <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
     </ul>
-  </div>
+  </nav>
 
 </header>
 
-<!--TODO: <main> wrapper for <section> elements -->
-<section class="selfIntro">
-  <!-- TODO: remove these primaryIntro and secondaryIntro divs, not reusable and not needed at all -->
-  <div class="primaryIntro">
-    <h2>Welcome!</h2>
-    <p>This is my website, built by me! I'm a musician, researcher, teacher, and web developer. Take a look at my projects below, or check
-    out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn.</p>
-  </div>
+<main>
+  <section>
+    <div>
+      <h2>Welcome!</h2>
+      <p>This is my website, built by me! I'm a musician, researcher, teacher, and web developer. Take a look at my projects below, or check
+      out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn.</p>
+    </div>
 
-  <!-- TODO: class="centered" or something similar, actionIntro is not reusable at all -->
-  <p class="actionIntro"> <a href="mailto:jameelahuq@gmail.com">Send me Info!</a></p>
+    <p class="callToAction"> <a href="mailto:jameelahuq@gmail.com">Send me Info!</a></p>
 
-  <div class="secondaryIntro">
-    <h3>Full-Stack Engineer</h3>
-    <p>I'm currently looking for a front-end or full-stack web development opportunity. You can take a look at my <a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a> for more information.</p>
-  </div>
-</section>
+    <div>
+      <h3>Full-Stack Engineer</h3>
+      <p>I'm currently looking for a front-end or full-stack web development opportunity. You can take a look at my <a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a> for more information.</p>
+    </div>
+  </section>
 
-<section class="codePortfolio">
-  <!-- TODO: just make these top-level sections in <main> with a special class like "project", no list items needed -->
-  <ul class="portfolioList">
+      <!--https://www.capitalwon.com/#/-->
 
-    <!--https://www.capitalwon.com/#/-->
+      <!--https://www.fashionsense.club/-->
 
-    <!--https://www.fashionsense.club/-->
-
-    <li class="codeBit" id="jaqd">
+    <figure id="jaqd">
       <a href="  http://jaqd.herokuapp.com/#/home"><img src="Index/resources/pusheen-wiggle-blogger.gif"></a>
       <!-- TODO: don't think you need the codeBitDesc wrapper -->
-      <div class="codeBitDesc">
+      <figcaption>
         <h3>JAQ'd Blog</h3>
         <!-- TODO: change to <p> descriptions and use blog posts for history -->
-        <span class="created">2015 Nov 20</span>
-        <span class="updated">Last update: 2015/11/25</span>
-      </div>
-    </li>
+        <p class="created">2015 Nov 20</p>
+        <p class="updated">Last update: 2015/11/25</p>
+      </figcaption>
+    </figure>
 
-    <li class="codeBit" id="battleShips">
+    <figure id="battleShips">
       <a href="Battleship_Galactic/index.html"><img id="battlePic" src="Battleship_Galactic/pusheen-wiggle-rockets.jpg"/></a>
-      <div class="codeBitDesc">
+      <figcaption>
         <h3>Galactic Battle</h3>
-        <span class="created">2015 Sept 22</span>
-        <span class="updated">Last update: 2015/09/22</span>
-      </div>
-    </li>
+        <p class="created">2015 Sept 22</p>
+        <p class="updated">Last update: 2015/09/22</p>
+      </figcaption>
+    </figure>
 
-    <li class="codeBit" id="Hanoi">
+    <figure id="Hanoi">
       <a href="Hanoi/hanoi.html"><img src="Index/resources/pusheen-wiggle-boat.gif"></a>
-      <div class="codeBitDesc">
+      <figcaption>
         <h3>Noah's Ark</h3>
-        <span class="created">2015 August 31</span>
-        <span class="updated">Last update: 2015/08/32</span>
-        </div>
-    </li>
+        <p class="created">2015 August 31</p>
+        <p class="updated">Last update: 2015/08/32</p>
+        </figcaption>
+    </figure>
 
-    <li class="codeBit" id="Flikd">
+    <figure id="Flikd">
       <a href="../assets/Boxes/boxes.html"><img src="../assets/Boxes/pusheen_internet_wiggle.gif"></a>
-      <div class="codeBitDesc">
+      <figcaption>
         <h3>Flik'd Photos</h3>
-        <span class="created">2015 August 29</span>
-        <span class="updated">Last update: 2015/08/30</span>
-      </div>
-    </li>
+        <p class="created">2015 August 29</p>
+        <p class="updated">Last update: 2015/08/30</p>
+      </figcaption>
+    </figure>
 
-    <li class="codeBit" id="catBush">
+    <figure id="catBush">
       <a href="Find_the_Cat/find_the_cat.html"><img src="Index/resources/ninja_pusheen_wiggle.gif"></a>
-      <div class="codeBitDesc">
+      <figcaption>
         <h3>Find the Cat</h3>
-        <span class="created">2014 March 28</span>
-        <span class="updated">Last update: 2015/08/27</span>
-      </div>
-    </li>
+        <p class="created">2014 March 28</p>
+        <p class="updated">Last update: 2015/08/27</p>
+      </figcaption>
+    </figure>
 
-    <li class="codeBit" id="calculator">
+    <figure id="calculator">
       <a href="Calculator/calculator.html"><img src="Calculator/pusheen-wiggle-math.gif"></a>
-      <div class="codeBitDesc">
+      <figcaption>
         <h3>Kitty Calculator</h3>
-        <span class="created">2015 Aug 30</span>
-        <span class="updated">Last update: 2015/09/01</span>
-        </div>
-    </li>
+        <p class="created">2015 Aug 30</p>
+        <p class="updated">Last update: 2015/09/01</p>
+        </figcaption>
+    </figure>
 
-    <li class="codeBit" id="rhymeChasers">
+    <figure id="rhymeChasers">
       <a href="https://www.rhymechasers.com/games/rhymechasers/"><img src="https://www.rhymechasers.com/images/logo-color.png"></a>
-      <div class="codeBitDesc">
+      <figcaption>
         <h3>Chase the Rhyme</h3>
-        <span class="created">2015 Oct 25</span>
-        <span class="updated">Last update: 2015/11/07</span>
-        </div>
-    </li>
+        <p class="created">2015 Oct 25</p>
+        <p class="updated">Last update: 2015/11/07</p>
+        </figcaption>
+    </figure>
 
-    <!--<li class="codeBit" id="focusInII">-->
-      <!--<div class="centeringContainer">-->
-        <!--<div id="magnifyingArea">-->
-          <!--<img id="magnifyingGlass" src="Program_Blog/Focus_In/magnify-pointer.png">-->
-          <!--<img id="magnifiedImage" src="Program_Blog/Focus_In/worldsfair11-hp.jpg">-->
+      <!--<li class="codeBit" id="focusInII">-->
+        <!--<div class="centeringContainer">-->
+          <!--<div id="magnifyingArea">-->
+            <!--<img id="magnifyingGlass" src="Program_Blog/Focus_In/magnify-pointer.png">-->
+            <!--<img id="magnifiedImage" src="Program_Blog/Focus_In/worldsfair11-hp.jpg">-->
+          <!--</div>-->
         <!--</div>-->
-      <!--</div>-->
-      <!--<h3>Focus In</h3>-->
-      <!--&lt;!&ndash;<p class="desc">I found this coding challenge on line. It uses a Google header image and asks the programmer to "magnify" it. The first challenge in this&ndash;&gt;-->
-      <!--&lt;!&ndash;was that the magnifying glass was too large to use the "cursor" property in the CSS. Therefore, it's necessary to create an HTML element that can be referenced&ndash;&gt;-->
-      <!--&lt;!&ndash;and manipulated in the javascript. Getting the pointers X and Y coordinates, and setting them equal to the "top" and "left" properties of the glass element is a start.&ndash;&gt;-->
-      <!--&lt;!&ndash;The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to&ndash;&gt;-->
-      <!--&lt;!&ndash;the pointed-to element.&ndash;&gt;-->
-      <!--&lt;!&ndash;The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>&ndash;&gt;-->
-      <!--<span class="updated">2016 June 08</span>-->
-      <!--<span class="updated">Last update: 2015/11/07</span>-->
-    <!--</li>-->
-  </ul>
+        <!--<h3>Focus In</h3>-->
+        <!--&lt;!&ndash;<p class="desc">I found this coding challenge on line. It uses a Google header image and asks the programmer to "magnify" it. The first challenge in this&ndash;&gt;-->
+        <!--&lt;!&ndash;was that the magnifying glass was too large to use the "cursor" property in the CSS. Therefore, it's necessary to create an HTML element that can be referenced&ndash;&gt;-->
+        <!--&lt;!&ndash;and manipulated in the javascript. Getting the pointers X and Y coordinates, and setting them equal to the "top" and "left" properties of the glass element is a start.&ndash;&gt;-->
+        <!--&lt;!&ndash;The next challenge was creating the magnified effect, which was accomplished with implimenting a background that has a position based on the cursor location relative to&ndash;&gt;-->
+        <!--&lt;!&ndash;the pointed-to element.&ndash;&gt;-->
+        <!--&lt;!&ndash;The biggest challenge, and the one that I am working on currently, is making sure the right properties and proportions are being used, so it looks good.</p>&ndash;&gt;-->
+        <!--<span class="updated">2016 June 08</span>-->
+        <!--<span class="updated">Last update: 2015/11/07</span>-->
+      <!--</figure>-->
 
-</section>
-
+</main>
 <footer>
-  <!-- TODO: this should probably be a <p> -->
-  <span>Copyright © 2016, Jameela Huq (with a little help from <a href="http://www.pusheen.com/">Pusheen</a>)</span>
-  <!-- TODO: just "social-links" -->
-  <!-- TODO: target="_blank", and optionally add rel="nofollow" to outbound links -->
-  <ul class="socialLinksBottom">
-    <li><a href="https://www.linkedin.com/in/jameelahuq">LinkedIn</a></li>
-    <li><a href="https://github.com/jameelahuq">Github</a></li>
-    <li><a href="https://twitter.com/JameelaHuq">Twitter</a></li>
-    <li><a href="mailto:jameelahuq@gmail.com">Email</a></li>
+  <p>Copyright © 2016, Jameela Huq (with a little help from <a href="http://www.pusheen.com/">Pusheen</a>)</p>
+  <ul class="social-links">
+    <li><a href="https://www.linkedin.com/in/jameelahuq" target="_blank">LinkedIn</a></li>
+    <li><a href="https://github.com/jameelahuq" target="_blank" rel="nofollow">Github</a></li>
+    <li><a href="https://twitter.com/JameelaHuq" target="_blank" rel="nofollow">Twitter</a></li>
+    <li><a href="mailto:jameelahuq@gmail.com" target="_blank">Email</a></li>
     <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
   </ul>
 </footer>
