under 560px show menu appears instead of links

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,10 @@
 
   <div class="name-bar">
     <h1>Jameela Huq</h1>
-    <!-- TODO: change everything to non-camelcase, rename to social-links and target based on container -->
+    <span class="fa fa-chevron-down show-condensed"></span>
+    <span class="fa fa-chevron-up hide-condensed"></span>
+
     <ul class="social-links">
-      <!-- TODO: accessibility (screen readers need hidden text to know where these links go) -->
       <li class="linkedIn">
         <a href="https://www.linkedin.com/in/jameelahuq">
           <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -61,7 +62,7 @@
 
   <nav>
     <ul>
-      <li>Web Development</li>
+      <li>Web Dev<span class="full-word">elopment</span></li>
       <li>Science</li>
       <li>Music</li>
       <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
@@ -78,7 +79,7 @@
       out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn.</p>
     </div>
 
-    <p class="callToAction"> <a href="mailto:jameelahuq@gmail.com">Send me Info!</a></p>
+    <p class="call-to-action"> <a href="mailto:jameelahuq@gmail.com">Send me Info!</a></p>
 
     <div>
       <h3>Full-Stack Engineer</h3>
