Intro Condtent edited by Neil

--- a/public/index.html
+++ b/public/index.html
@@ -74,16 +74,22 @@
 <main>
   <section>
     <div>
-      <h2>Welcome!</h2>
-      <p>This is my website, built by me! I'm a musician, researcher, teacher, and web developer. Take a look at my projects below, or check
-      out my blog series "<a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">Adventures in Algorithms</a>" on LinkedIn.</p>
+      <h2>I build stuff for the web ^_^</h2>
+      <p>Hi, I'm Jameela! I've been writing software since before the Internet and have recently entered the exciting field
+        of web development. I've consulted several start-ups such as <b>Magic</b> and built <b>award-winning projects</b>
+        at hackathons like <b>TechCrunch Disrupt</b> and <b>DeveloperWeek</b>. As a former teacher, I'm also passionate about
+        research and science education. One of my projects was a <b>science education game</b> developed at UC Berkeley that
+        simulates the electric grid to help students learn about power management in the classroom.</p>
     </div>
 
-    <p class="call-to-action"> <a href="mailto:jameelahuq@gmail.com">Send me Info!</a></p>
+    <p class="call-to-action"> <a href="mailto:jameelahuq@gmail.com">Contact me about opportunities!</a></p>
 
     <div>
       <h3>Full-Stack Engineer</h3>
-      <p>I'm currently looking for a front-end or full-stack web development opportunity. You can take a look at my <a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a> for more information.</p>
+      <p>I currently work as a freelancer with availability for new clients, and I'm open to full-time opportunities as well.
+        Take a look at more of my projects below (you're already looking at one of them), and be sure to read my
+        <a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">
+          Adventures in Algorithms</a>" publications on LinkedIn!</p>
     </div>
   </section>
 
