--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="Index/css/reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:700,400' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,900,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="Index/css/style.css">
 </head>
 <body>
@@ -29,8 +29,12 @@
 
   <div class="name-bar">
     <h1>Jameela Huq</h1>
-    <span class="fa fa-chevron-down show-condensed"></span>
-    <span class="fa fa-chevron-up hide-condensed"></span>
+
+    <input type="checkbox" name="social-link-toggle" id="social-link-toggle" />
+    <label for="social-link-toggle">
+      <span class="fa fa-chevron-down show-condensed"></span>
+      <span class="fa fa-chevron-up hide-condensed"></span>
+    </label>
 
     <ul class="social-links">
       <li class="linkedIn">
@@ -194,7 +198,7 @@
 
 <script src="Index/js/jquery-1.11.1.min.js"></script>
 <script src="Index/js/main.js"></script>
-<!--<script src="Program_Blog/Focus_In/focus-in.js"></script>-->
+<script src="Program_Blog/Focus_In/focus-in.js"></script>
 <script src="../assets/Pet_Poke/pet-poke.js"></script>
 
 
