only arrow inside box spins
also moved a few related css properties for readability

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
       <h1>Jameela Huq</h1>
       <input type="checkbox" name="social-link-toggle" id="social-link-toggle" />
       <label for="social-link-toggle">
-        <span class="fa fa-chevron-down show-condensed"></span>
+        <span class="fa fa-chevron-down show-condensed" aria-hidden="true"></span>
+        <span class="hidden-text">Show Social Media Links</span>
       </label>
 
       <ul class="social-links">
