boxes are back in prod

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
     </figure>
 
     <figure id="Flikd">
-      <a href="../assets/Boxes/boxes.html"><img src="../assets/Boxes/pusheen_internet_wiggle.gif"></a>
+      <a href="Boxes/boxes.html"><img src="Boxes/pusheen_internet_wiggle.gif"></a>
       <figcaption>
         <h3>Flik'd Photos</h3>
         <p class="created">2015 August 29</p>
