new "awards" section framework

--- a/public/index.html
+++ b/public/index.html
@@ -92,9 +92,34 @@
         <p>I currently work as a freelancer with availability for new clients, and I'm open to full-time opportunities as well.
           Take a look at more of my projects below (you're already looking at one of them), and be sure to read my
           <a href="https://www.linkedin.com/pulse/adventures-algorithms-chapter-4-machine-learning-models-jameela-huq">
-            Adventures in Algorithms</a>" publications on LinkedIn!</p>
+            Adventures in Algorithms</a> publications on LinkedIn!</p>
       </div>
     </section>
+
+
+    <section>
+      <div>
+        <h2>Awards</h2>
+        <p>Nothing like spending the weekend planning and developing a project with with fellow coders, especially when you win! Here are
+        some of my prize entries.</p>
+      </div>
+
+      <div>
+        <h3>Developer Week</h3>
+        <p>Capital Won</p>
+      </div>
+
+      <div>
+        <h3>Hackathon of Outlandish Things</h3>
+        <p>Share or Dare</p>
+      </div>
+
+      <div>
+        <h3>TechCrunch Disrupt</h3>
+        <p>FashionSense</p>
+      </div>
+    </section>
+
 
         <!--https://www.capitalwon.com/#/-->
         <!--https://www.fashionsense.club/-->
