web dev links to index

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 
     <nav>
       <ul>
-        <li>Web Dev<span class="full-word">elopment</span></li>
+        <li><a href="index.html">Web Dev<span class="full-word">elopment</span></a></li>
         <li>Science</li>
         <li>Music</li>
         <li><a href="Index/resources/2016-huq-resume-comp-CH.pdf" target="_blank">Résumé</a></li>
